# ServiceExampleWithRust

./: .gitignore  Cargo.toml  Makefile.toml
src/: health.rs  main.rs  repository.rs  user.rs
src/v1/: mod.rs  users.rs
