[package]
name = "mi-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
futures = "0.3.30"
async-trait = "0.1.78"

[dev-dependencies]
actix-rt = "2.9.0"
mockall = "0.12.1"

